Add "business" models
Adds the needed models for searching for a list of repositories on
GitHub as well as viewing some basic stats of a specific repository.
The models are deserialized using Moshi with some cases using slightly
different names for convenience/readability or simply following
camel case instead of snake case.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,7 +130,7 @@ repositories {
 // Signing Config code
 // From https://gist.github.com/gabrielemariotti/6856974
 def props = new Properties()
-def propFile = new File('signing.properties')
+def propFile = new File('.siging/signing.properties')
 if (propFile.canRead()) {
     props.load(new FileInputStream(propFile))
 
