--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     // Define our overarching dependency versions.
     ext {
         dagger_version = '2.11-rc1'
-        kotlin_version = '1.1.2'
+        kotlin_version = '1.1.2-3'
         android_support_version = '25.3.1'
     }
 
